--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "script.js",
   "scripts": {
     "server": "tsx watch server/server"
-
   },
   "keywords": [],
   "author": "",
@@ -16,5 +15,9 @@
     "path": "^0.12.7",
     "tsx": "^4.19.2",
     "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/ws": "^8.5.13"
   }
 }
